<?xml version="1.0"?>
<package>
  <name>oculus_driver</name>
  <version>0.0.0</version>
  <description>The oculus_ros package</description>

  <maintainer email="t.ogura@gmail.com">Takashi Ogura</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/oculus_driver</url>
  <author email="t.ogura@gmail.com">Takashi Ogura</author> -->

  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>oculus_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>oculus_msgs</run_depend>

  <test_depend>rosunit</test_depend>

</package>
