<?xml version="1.0"?>
<package>
  <name>oculus_msgs</name>
  <version>0.0.0</version>
  <description>The oculus_msgs package</description>

  <maintainer email="t.ogura@gmail.com">Takashi Ogura</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/oculus_msgs</url>

	<author email="t.ogura@gmail.com">Takashi Ogura</author>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
</package>
