<?xml version="1.0"?>
<package>
  <name>oculus_viewer</name>
  <version>0.0.0</version>
  <description>The oculus_viewer package</description>

  <maintainer email="t.ogura@gmail.com">Takashi Ogura</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/oculus_viewer</url>
  <author email="t.ogura@gmail.com">Takashi Ogura</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>oculus_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>oculus_msgs</run_depend>

  <test_depend>rosunit</test_depend>

</package>
